Fixup contrast overrides for .*-primary colors

--- a/R7.Epsilon/Skins/css/contrast-overrides.scss
+++ b/R7.Epsilon/Skins/css/contrast-overrides.scss
@@ -38,11 +38,11 @@ body {
 }
 
 .border-primary {
-    background-color: $main-color !important;
+    border-color: $main-color !important;
 }
 
 .text-primary {
-    background-color: $main-color !important;
+    color: $main-color !important;
 }
 
 /* Badges */
